--- a/style.css
+++ b/style.css
@@ -702,9 +702,6 @@ body{
         padding: 50px 20px;
      }
 
-     .section-7-column-1,.section-7-column-2{
-    }
-
     .column-2-gallery-1, .column-2-gallery-2, .column-2-gallery-3, .column-2-gallery-4{
         height: 400px;
     }
@@ -840,7 +837,78 @@ body{
         padding: 16px 48px 16px 47px;
     }
 
+}
 
+@media (max-width: 380px){
+    .section-2{
+        height: 100vh;
+        width: 100%;
+    }
+
+    .section-2-container{
+        background-size:90vh 180vw;
+        margin-top: 0px;
+    }
+
+    .section-2-items{
+        padding-top: 400px;
+        padding-left: 60px;
+    }
+
+    .section-2-text-1 {
+        font-size: 1rem;
+        letter-spacing: 2px;
+        font-weight: 300;
+        text-transform: uppercase;
+    }
+    
+    .section-2-text-2{
+        font-size: 2.8rem;
+        text-transform: uppercase;
+        font-family: "Archivo Black";
+        font-weight: 500;
+    }
+
+    .hr-line{
+        width: 80%;
+    }
+
+    .section-5-column-1-img{
+        background-size: 300px;
+    }
+
+    .section-5-column-1-img{
+        height: 100vh;
+        margin-top: 0;
+    }
+
+       .section-7-column-1-text-1{
+        font-size: 0.8rem;
+       }
+       
+       .section-7-column-1-text-2{
+        font-size: 3.5rem;
+       }
+
+       
+    .section-7{
+        padding: 80px 30px 30px 10px;
+    }
+
+
+    .section-7-column-1,.section-7-column-2{
+        width: 100%;
+    }
+
+    .column-2-gallery-1, .column-2-gallery-2, .column-2-gallery-3, .column-2-gallery-4{
+        width: 100%;
+        height: 350px;
+    }
+
+    .section-7-column-1-text-2{
+        width: 45%;
+        padding-bottom: 50px;
+    }
 }
 
 
