--- a/style.css
+++ b/style.css
@@ -578,6 +578,71 @@ body{
 }
 
 @media (max-width: 780px){
+    .section-2-text-1 {
+        font-size: 3rem;
+    }
+
+    .section-2-text-2{
+        font-size: 5rem;
+        font-weight: 700;
+    }
+
+    .hr-line{
+        width: 65%;
+
+    }
+
+
+    .section-3-para{
+        width: 500px;
+    }
+
+    .section-4-container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .section-4-column-1, .section-4-column-2{
+        width: 80%;
+    } 
+
+    .section-4-container{
+        padding: 50px 0px;
+     }
+
+     .section-7{
+        padding: 50px 40px 30px 30px;
+       }
+
+     .section-7-container{
+         display: flex;
+         flex-direction: column;
+         justify-content:center ;
+         align-items: center;
+     }
+
+     .section-7-column-1,.section-7-column-2{
+        width: 100%;
+    }
+
+     .section-7-column-1-text-2{
+         width: 100%;
+         padding-bottom: 60px;
+     }
+
+     .section-7-column-2-gallery{
+         height: 300px;
+         
+     }
+
+     .column-2-gallery-1, .column-2-gallery-2, .column-2-gallery-3, .column-2-gallery-4{
+        width: 400px;
+    }
+
+}
+
+@media (max-width: 600px){
 
     .section-2-items{
         padding-top: 400px;
@@ -677,39 +742,39 @@ body{
 
 }
 
-
-@media (max-width: 650px){
-
-    
-.section-3-heading-1{
-    font-size: 1.1rem;
-}
-
-    .section-3-heading-2{
-        font-size: 2.8rem;
-    }
-
-    .section-3-para{
-        font-size: 1.18rem;
-    }
-
-    
-    .section-4-column-1, .section-4-column-2{
-        width: 80%;
-    } 
-
-    .section-4-container{
-        padding: 50px 20px;
-     }
-
-    .column-2-gallery-1, .column-2-gallery-2, .column-2-gallery-3, .column-2-gallery-4{
-        height: 400px;
-    }
-
-}
-
-
 @media (max-width: 550px){
+
+    
+    .section-3-heading-1{
+        font-size: 1.1rem;
+    }
+    
+        .section-3-heading-2{
+            font-size: 2.8rem;
+        }
+    
+        .section-3-para{
+            font-size: 1.18rem;
+        }
+    
+        
+        .section-4-column-1, .section-4-column-2{
+            width: 80%;
+        } 
+    
+        .section-4-container{
+            padding: 50px 20px;
+         }
+    
+        .column-2-gallery-1, .column-2-gallery-2, .column-2-gallery-3, .column-2-gallery-4{
+            height: 400px;
+        }
+    
+    }
+
+
+
+@media (max-width: 500px){
 
     .section-2-items{
         padding-top: 450px;
