--- a/style.css
+++ b/style.css
@@ -836,8 +836,9 @@ body{
     }
 
     .section-2-container{
-        background-size:105vh 110vw;
-        margin-top: 0px;
+        background-size:120vh 135vw;
+        position: relative;
+        bottom: 20px;
     }
 
     .section-2-items{
@@ -863,7 +864,7 @@ body{
         width: 70%;
     }
     .section-3-heading-1{
-        padding-top: 3rem;
+        padding-top: 7rem;
     }
 
     .section-4-column-1-img, .section-4-column-2-img{
@@ -871,7 +872,10 @@ body{
     }
 
     .section-5-column-1-img{
-        background-size: 380px;
+        background-size: 400px;
+        padding: auto;
+        position: relative;
+        bottom: 70px;
     }
 
     .section-5-column-2{
@@ -904,7 +908,7 @@ body{
     
     .section-8-btn-1, .section-8-btn-2{
         font-weight: 600;
-        padding: 20px 36px;
+        padding: 20px 38px;
         margin-bottom: 30px;
         text-align: center;
 
@@ -912,24 +916,25 @@ body{
     }
     
     .section-8-btn-2{
-        padding: 20px 48px 20px 48px;
+        padding: 20px 50px 20px 50px;
     }
 
 }
 
-@media (max-width: 380px){
+@media (max-width: 390px){
     .section-2{
         height: 100vh;
         width: 100%;
     }
 
     .section-2-container{
-        background-size:70vh 200vw;
-        margin-top: 0px;
+        background-size:80vh 135vw;
+        position: relative;
+        bottom: 80px;
     }
 
     .section-2-items{
-        padding-top: 550px;
+        padding-top: 450px;
         padding-left: 50px;
     }
 
@@ -950,9 +955,15 @@ body{
     .hr-line{
         width: 85%;
     }
+    
+    .section-3-heading-1{
+        padding-top: 3.5rem;
+    }
 
     .section-5-column-1-img{
         background-size: 300px;
+        position: relative;
+        bottom: 50px;
     }
 
     .section-5-column-1-img{
