--- a/style.css
+++ b/style.css
@@ -921,14 +921,14 @@ body{
 
 }
 
-@media (max-width: 390px){
+@media (max-width: 400px){
     .section-2{
         height: 100vh;
         width: 100%;
     }
 
     .section-2-container{
-        background-size:80vh 135vw;
+        background-size:90vh 135vw;
         position: relative;
         bottom: 80px;
     }
@@ -998,6 +998,41 @@ body{
         width: 45%;
         padding-bottom: 50px;
     }
+}
+
+
+@media (max-width: 390px){
+    .section-2-container{
+        background-size:80vh 145vw;
+        position: relative;
+        bottom: 70px;
+    }
+
+    .section-2-items{
+        padding-top: 460px;
+        padding-left: 50px;
+    }
+
+}
+
+@media (max-width: 360px){
+    .section-2-container{
+        background-size:85vh 155vw;
+        position: relative;
+        bottom: 70px;
+    }
+
+
+}
+
+@media (max-width: 330px){
+    .section-2-container{
+        background-size:80vh 165vw;
+        position: relative;
+        bottom: 80px;
+    }
+
+
 }
 
 
